fix bugs jumpto matches

--- a/src/routes/matches/desktop/matches.css
+++ b/src/routes/matches/desktop/matches.css
@@ -4,9 +4,9 @@ body {
   background-color: #1f1f1f;
 }
 
-.matchlist_container {
-  padding: 0.8rem;
-}
+/* .matchlist_container {
+  padding: 0rem;
+} */
 
 .matches_header_bg {
   height: 6rem;
@@ -34,9 +34,14 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   text-align: left;
-  display: grid;
-
-  /* justify-content: center; */
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  top: 18vh;
+  align-items: center;
+  z-index: 0;
 }
 
 .matchlist_valuelistitem {
@@ -119,8 +124,9 @@ body {
 
 .filterContent_container {
   padding: 0 1rem 1rem 5rem;
-  position: sticky;
+  position: fixed;
   top: 16rem;
+  z-index: 1;
 }
 
 .matches_filter {
@@ -493,41 +499,19 @@ body {
   margin: 14rem;
 }
 
-@media screen and (max-width: 709px) and (max-width: 828px) {
-  .matches_grid {
-    grid-template-columns: 0.5fr 1fr 0.6fr;
-    grid-column-gap: 3rem;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .filterContent_container {
-    padding: 0 1rem 1rem 2rem;
-  }
-}
-
-@media screen and (max-width: 1366px) and (max-height: 657px) {
-  .matchesCardList__container {
-    grid-gap: 1.5rem;
-  }
-
+@media screen and (max-width: 1366px) {
   .matchlist_wrapper {
     padding-top: 7rem;
+  }
+
+  .matchlist_content_center a {
+    width: 50%;
   }
 }
 
 @media screen and (min-width: 1500px) {
-  .matches_grid {
-    grid-template-columns: 0.5fr 1fr 0.5fr;
-    grid-column-gap: 7rem;
-  }
-
-  .matches_grid > span:first-child {
-    justify-self: flex-end;
-  }
-
-  .matches_grid > span:last-child {
-    justify-self: flex-start;
+  .matchlist_content_center {
+    top: 18vh;
   }
 }
 
